examples/04-fullstack/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: fullstack
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/managed-by: compose2k8s
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/managed-by: compose2k8s
    spec:
      containers:
        - name: api
          image: node:20-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          args:
            - node
            - server.js
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            exec: &a1
              command:
                - curl
                - -f
                - http://localhost:3000/health
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            exec: *a1
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
