examples/04-fullstack/k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: fullstack
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/managed-by: compose2k8s
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
        app.kubernetes.io/managed-by: compose2k8s
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-default-conf
              mountPath: /etc/nginx/conf.d/default.conf
              readOnly: true
              subPath: default.conf
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: nginx-default-conf
          configMap:
            name: nginx-nginx-default-conf
