examples/04-fullstack/k8s/postgres-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: fullstack
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/managed-by: compose2k8s
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - port: 5432
      name: tcp-5432
