examples/04-fullstack/k8s/redis-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-headless
  namespace: fullstack
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/managed-by: compose2k8s
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: redis
  ports:
    - port: 6379
      name: tcp-6379
